# autonomous-it-support-inbox-guardian

./: .env.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  context_references.md  pyproject.toml
Design/: Autonomous IT Support Inbox Guardian - Specs.docx  Autonomous_IT_Support_Inbox_Guardian_Specs.txt
agent/: evaluators.py  instrumentation.py  main.py  root_agent.py  tools.py
agent/dashboard/: app.py  inbox_state.json
agent/prompts/: self_eval_prompt.txt  system_prompt.txt
docs/: submission_notes.md
